--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
         "nesbot/carbon": "^2.43",
+        "phpmailer/phpmailer": "^6.4",
         "spatie/laravel-permission": "^3.17"
     },
     "require-dev": {
